# Project-AI-Agent

backend/: main.py  pyproject.toml
backend/database/: db.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ChatInput.tsx  ChatMessage.tsx  ChatPanel.tsx  CodeBlock.tsx  Header.tsx  LeftSidebar.tsx  RightSidebar.tsx  SettingsSlider.tsx
